Flex gap not working in Safari Mobile FIXED

--- a/style.css
+++ b/style.css
@@ -105,8 +105,7 @@ body {
   padding: 0;
   border: 0;
   background-color: transparent;
-  flex-wrap: wrap;
-  gap: 0.625rem;
+  row-gap: 0.625rem;
   display: none;
 }
 
@@ -541,9 +540,13 @@ body {
   }
 
   .regular-users {
-    flex-direction: column-reverse;
-    justify-content: center;
-    gap: 0.75rem;
+    justify-items: center;
+    display: grid;
+    row-gap: 0.75rem;
+  }
+
+  .regular-users__text-about {
+    order: -1;
   }
 
   .regular-user {
@@ -577,15 +580,15 @@ body {
   }
 
   .navbar ul {
-    flex-direction: column;
+    display: grid;
+    justify-items: center;
     row-gap: 3rem;
-    align-items: center;
     padding: 10rem 0.6rem;
     font-size: 2.5rem;
   }
 
   .mobile-nav__container {
-    display: flex;
+    display: grid;
     position: relative;
     z-index: 11;
   }
